# custom-spotify-cards

./: .gitignore  Cargo.toml  README.md  run.sh  rustfmt.toml
.github/workflows/: deploy.yml
common/: Cargo.toml
common/src/: cards.rs  lib.rs  model.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: api.rs  main.rs  utils.rs
frontend/src/component/: bg_buttons.rs  card_view.rs  color_buttons.rs  dl_button.rs  github.rs  home.rs  home_bar.rs  mod.rs  text_input.rs
