[package]
name = "common"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
serde = { version = "1.0.152", features = ["derive"] }
log = "0.4.17"
rusttype = "0.9.3"
imageproc = "0.23.0"
kmeans_colors = "0.5.0"
regex = "1.7.1"
palette = "0.6.1"
