[package]
name = "common"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
serde = { version = "1.0.189", features = ["derive"] }
log = "0.4.20"
rusttype = "0.9.3"
imageproc = "0.23.0"
kmeans_colors = "0.6.0"
regex = "1.10.2"
palette = "0.7.3"
textwrap = "0.16.0"
