[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
gloo = "0.8.0"
gloo-net = { version = "0.2.6", features = ["json", "http"] }
log = "0.4.17"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.61", features = ["HtmlInputElement", "Window", "Performance"] }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew/" }
common = { path = "../common" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
async-trait = "0.1.64"
dotenvy = "0.15.6"
base64 = "0.21.0"
serde_urlencoded = "0.7.1"
headers = "0.3.8"
regex = "1.7.1"
