[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = { version = "0.4.0", features = ["json", "http"] }
log = "0.4.20"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.64", features = ["HtmlInputElement", "Window", "Performance", "RequestRedirect", "RequestMode", "ReferrerPolicy", "RequestInit", "Request", "Headers", "Response"] }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew/" }
common = { path = "../common" }
serde_json = "1.0.107"
base64 = "0.21.4"
regex = "1.10.2"
image = "0.24.7"
